<?xml version="1.0" encoding="utf-8"?>
<com.websoft.vantium.mobilescanner.camera.RotateLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rotate_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckedTextView
            android:id="@+id/btn_auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_dock"
            android:checkMark="@drawable/btn_radio"
            android:checked="true"
            android:clickable="true"
            android:drawableLeft="@drawable/auto_pic"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/auto"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/ImageView00"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@drawable/doc_list_divider" />

        <CheckedTextView
            android:id="@+id/btn_horz"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_dock"
            android:checkMark="@drawable/btn_radio"
            android:clickable="true"
            android:drawableLeft="@drawable/land_pic"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/horizontal"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@drawable/doc_list_divider" />

        <CheckedTextView
            android:id="@+id/btn_vert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_dock"
            android:checkMark="@drawable/btn_radio"
            android:checked="false"
            android:clickable="true"
            android:drawableLeft="@drawable/port_pic"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/vertical"
            android:textColor="@color/white" />
    </LinearLayout>

</com.websoft.vantium.mobilescanner.camera.RotateLayout>