<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:text="txtTitle"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/orange" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="txtMessage"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layoutConfirm"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@color/light_gray"
        android:paddingTop="1dp" >

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_alert"
            android:text="@string/no"
            android:textColor="@color/black" 
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@drawable/btn_alert"
            android:text="@string/yes"
            android:textColor="@color/black" 
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutAlert"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@color/light_gray"
        android:paddingTop="1dip" >

        <Button
            android:id="@+id/btnOK"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_alert"
            android:text="@string/ok"
            android:textColor="@color/black" 
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>